[package]
name = "bevy_skein"
description = "Process glTF extras when spawning Scenes to insert Components using Reflection, such as when using Blender as an editor"
version = "0.6.0-rc.1"
authors = ["Chris Biscardi"]
repository = "https://github.com/rust-adventure/skein"
homepage = "https://bevyskein.dev/"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = [
    "assets/**/*",
    "test-project/**/*",
    ".github/**/*",
    "extension/**/*",
    "Justfile",
    "DESIGN.md",
]
rust-version = "1.95.0"

[dependencies]
bevy = { version = "0.19.0-dev", default-features = false, features = ["bevy_log", "bevy_gltf", "bevy_world_serialization", "bevy_asset"] }
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
gltf = "1.4.0"

[dev-dependencies]
bevy = { version = "0.19.0-dev" }

serde = { version = "1.0", features = ["derive"] }
test-components = { path = "./test-components" }

[features]
default = ["brp", "presets"]
# Serve the Bevy schema via BRP
brp = ["bevy/bevy_remote"]
presets = ["brp"]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"
# links in documentation
doc_markdown = "deny"

[lints.rust]
missing_docs = "deny"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git" }

[package.metadata.bevy_lint]
missing_reflect = "deny"
